src/scss/spm.scss
@import "bootstrap";

@import "gravityforms";

body {
    overflow-x: hidden;
}

/*
* === SITE ELEMENTS ===
*/

/*
* — Top Navigation —
*/

#google_translate_element {
}

#mobile-menu {
    display: none;
}

.mobile-menu-button-container {
    height: 100%;
    padding-right: 15px;
}

#mobile-menu-button {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    display: inline-block;
}

.header-logo {
    margin: 20px 0 20px 30px;
}

.navbars ul {
    list-style: none;
    margin: 0;
    padding: 0;
}

.navbars li {
    display: inline-block;
    margin-left: -1px;
    padding: 16px;
}

.navbars li:last-child {
    padding-right: 30px;
}

.navbar-secondary {
    color: #fff;
    font-size: 0.875rem;
    line-height: 1.1;
    text-align: right;
}

.navbar-secondary li.search {
    padding: 0;
    margin-right: 15px;
    background: #fff !important;
}

.navbar-secondary li.search input {
    font-size: 0.875rem !important;
    line-height: 1.1 !important;
}

.navbar-secondary-link:nth-child(2) {
    padding-left: 30px;
    clip-path: polygon(0 0, 100% 0, 100% 100%, 10% 100%);
}

.navbar-primary {
    font-weight: bold;
    line-height: 1.2;
    text-align: right;
}

.navbar-secondary a:link, .navbar-secondary a:visited { color: #fff; }
.navbar-secondary a:active, .navbar-secondary a:hover { opacity: 1; }

.navbar-primary a:link, .navbar-primary a:visited { color: $dark; }
.navbar-primary a:active, .navbar-primary a:hover { opacity: 1 !important; }

/*
* — Sub Menu (Siblings) —
*/
.sub-menu {
    background-color: $asc_lightest_gray;
    color: $dark;
    line-height: 1.75;
    padding: 15px 0;
}
.sub-menu ul {
    list-style: none;
    padding-left: 15px;
    margin-bottom: 0;
}

@media (min-width: 992px) {
    .sub-menu li {
        display: inline;
        margin-right: 20px;
    }

    .sub-menu li:last-child {
        margin-right: 0;
    }
}

.sub-menu li a {
    color: inherit;
}
.sub-menu li a:hover {
    opacity: 0.5;
}
/*
* — Primary Footer —
*/

.footer-primary {
    margin-bottom: 30px;
}

.footer-primary-content {
    border-top: 1px solid $asc_light_gray;
    padding-top: 30px;
    margin-bottom: 30px;
}
.footer a:link, .footer a:visited {
    color: inherit;
}
.footer a:active, .footer a:hover {
    opacity: 0.5;
}
.footer ul {
    font-size: 0.87rem;
    line-height: 1.1;
    list-style: none;
    margin-bottom: 0;
    padding-left: 0;
}
.footer li {
    margin-bottom: 20px;
}
.footer li:last-child {
    margin-bottom: 0;
}
.footer .menu-item {
    font-weight: bold;
}
.footer-contact-social {
    font-style: italic;
}
.footer-contact-social a:before {
    color: $primary;
    display: inline-block;
    font-family: 'Font Awesome 5 Brands';
    font-size: 1.25rem;
    font-style: normal;
    font-weight: 900;
    line-height: 1;
    margin-right: 10px;
    vertical-align: middle;
}
.footer-contact-social a[href*="facebook"]:before { content: '\f09a'; }
.footer-contact-social a[href*="instagram"]:before { content: '\f16d'; }
.footer-contact-social a[href*="linkedin"]:before { content: '\f08c'; }
.footer-contact-social a[href*="pinterest"]:before { content: '\f0d3'; }
.footer-contact-social a[href*="tumblr"]:before { content: '\f174'; }
.footer-contact-social a[href*="twitter"]:before { content: '\f081'; }
.footer-contact-social a[href*="youtube"]:before { content: '\f431'; }

@media (min-width: 768px) {
    .footer-primary {
        margin-bottom: 45px;
    }

    .footer-primary-content {
        margin-bottom: 0;
    }

    .footer-newsletter {
        border-top: 0 solid $asc_light_gray;
        padding-top: 0;
        margin-bottom: 0;
    }

    .footer-secondary-menu {
        border-bottom: none;
        padding-bottom: 0;
    }
    .footer-newsletter, .footer-logo {
        margin-top: 95px;
    }
}

@media (min-width: 992px) {
    .footer-newsletter {
        border-top: 1px solid $asc_light_gray;
        margin-top: 0;
        padding-top: 30px;
    }
    .footer-newsletter input[type='submit'] {
        margin-top: 15px;
    }
    .footer-logo {
        margin-top: 15px;
    }
}

.footer-newsletter h4 {
    font-weight: normal;
    font-size: 1rem;
    line-height: 1.2;
    margin-bottom: 10px;
}

.footer-logo {
    text-align: center;
}
.footer-logo img {
    max-width: 100%;
}
@media (min-width: 768px) {
    .footer-logo {
        text-align: right;
    }
}

/*
* — Tertiary Footer —
*/
.footer-tertiary {
    background-color: $primary;
    border-top: 12px solid $tertiary;
    color: $white;
    font-size: 0.75rem;
    line-height: 1.2;
    margin-top: 6px;
    padding: 15px 0;
    position: relative;
}
.footer-tertiary:before {
    background-color: $secondary;
    content: '';
    height: 6px;
    position: absolute;
    top: -18px;
    width: 100%;
}
@media (min-width: 768px) {
    .footer-attribution {
        text-align: right;
    }
}

/*
* === PAGE ELEMENTS ===
*/

/*
* — Main —
*/

.title-band {
    background-color: $primary;
    clip-path: polygon(100% 0, 100% 90%, 0 100%, 0 0);
    color: $white;
    margin-bottom: 20px;
    padding-top: 30px;
    padding-bottom: 20px;
}
.title {
    font-size: 1.7rem;
    font-weight: bold;
    line-height: 1.2;
}
.main {
    margin-bottom: 40px;
}
.main ol a, .main p a, .main ul a {
    font-weight: bold;
}
.sidebar-content p + ol, .sidebar-content p + ul {
    margin-top: -1.5rem;
    margin-bottom: 1.5rem;
}
@media (min-width: 768px) {
    .title-band {
        margin-bottom: 40px;
        padding-top: 80px;
        padding-bottom: 40px;
    } 
    .title {
        font-size: 2.25rem;
    }
    .main {
        margin-bottom: 110px;
    }
}

/*
* — Sidebars —
*/

.sidebar-sidebar {
    margin-top: 40px;
}
@media (min-width: 768px) {
    .sidebar-sidebar {
        margin-top: 70px;
    }
}
@media (min-width: 992px) {
    .sidebar-sidebar {
        margin-top: 0;
    }
}

.sidebar-module h3, .sidebar-module h4 {
    font-weight: bold;
    line-height: 1.2;
    margin-bottom: 0;
}
/* ... */

